final report: intro, dataset, eda, analysis setup

--- a/cs326_colab.ipynb
+++ b/cs326_colab.ipynb
@@ -1,6 +1,32 @@
 {
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Minimizing the Next Pandemic\n",
+        "## Confusion Matrix Crew - Evan Bertis-Sample, Welldone Matanga, Mariama Bah"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Introduction\n",
+        "\n",
+        "Our team wanted to answer a core question: How can we minimize the negative effects of pandemics similar to COVID-19? We investigated if there were universally good policy decisions that apply to every country; the relationship between case rate and mortality rate as well as their affect on policy; and if there was an optimal set of policy decisions.\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Dataset\n",
+        "\n",
+        "Our data came from the Oxford Covid-19 Government Response Tracker, which is available on GitHub [here](https://github.com/OxCGRT/covid-policy-dataset/tree/main). However, we use a cleaned up version which is available in [our GitHub repo](https://github.com/Evan-Bertis-Sample/cs326-final) in the data folder.\n"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 3,
       "metadata": {
@@ -33,6 +59,13 @@
         "\n",
         "df = pd.read_csv('data/oxcgrt_tidy.csv')\n",
         "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## EDA & Preprocessing\n"
       ]
     },
     {
@@ -94,13 +127,6 @@
       "source": [
         "get_dataset_overview()"
       ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": []
     },
     {
       "cell_type": "code",
@@ -768,6 +794,20 @@
         "\n",
         "\n",
         "plot_filtered_trends()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Analysis"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Clustering"
       ]
     },
     {
