clean data code

--- a/cs326_colab.ipynb
+++ b/cs326_colab.ipynb
@@ -23,12 +23,286 @@
       "source": [
         "## Dataset\n",
         "\n",
-        "Our data came from the Oxford Covid-19 Government Response Tracker, which is available on GitHub [here](https://github.com/OxCGRT/covid-policy-dataset/tree/main). However, we use a cleaned up version which is available in [our GitHub repo](https://github.com/Evan-Bertis-Sample/cs326-final) in the data folder.\n"
+        "Our data came from the Oxford Covid-19 Government Response Tracker, which is available on GitHub [here](https://github.com/OxCGRT/covid-policy-dataset/tree/main). However, we use a cleaned up version which is available in [our GitHub repo](https://github.com/Evan-Bertis-Sample/cs326-final) in the data folder. Cleaning the dataset was pretty involved, as the time-series data was very inconsistently stored, and spread out across multiple CSV files.\n",
+        "\n",
+        "Some of the tables stored the data such that adjacent rows meant adjacent days, for example row 0 for the USA data may represent 0 days since 2020, row 3 may represent 3 days since 2020, etc. Within these rows would be multiple measurements like case rate, death, etc.\n",
+        "\n",
+        "Other tables were created such that each row meant a type of measurement, like economic index. This row would have many columns, which represented the measurement throughout the course of the days.\n",
+        "\n",
+        "We wanted to make our data more consistent, so using pandas, we consolidated the data such that a row includes all measurements for a given day.\n",
+        "\n",
+        "After cleaning the data, we had 456255 rows of data."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Data Cleaning Code\n",
+        "\n",
+        "This code was ran locally. For certain tasks, our team had a preferred to use a standard python enviornment with Git, and create our own modules. The code that was initially developed and ran locally will be noted."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from __future__ import annotations\n",
+        "\n",
+        "import argparse\n",
+        "import re\n",
+        "from pathlib import Path\n",
+        "from typing import List, Optional, Tuple\n",
+        "\n",
+        "import pandas as pd\n",
+        "from tqdm import tqdm\n",
+        "\n",
+        "EPOCH = pd.Timestamp(\"2020-01-01\")\n",
+        "\n",
+        "IDENTITY_COLS = [\n",
+        "    \"CountryName\",\"CountryCode\",\n",
+        "    \"RegionName\",\"RegionCode\",\n",
+        "    \"CityName\",\"CityCode\",\n",
+        "    \"Jurisdiction\"\n",
+        "]\n",
+        "\n",
+        "DATE_COL_PATTERN = re.compile(r\"^\\d{2}[A-Za-z]{3}\\d{4}$\")  # e.g. 01Jan2020\n",
+        "\n",
+        "# ARTIFACT OF THIS ONCE BEING A CLI TOOL\n",
+        "def parse_args(argv = None) -> argparse.Namespace:\n",
+        "    p = argparse.ArgumentParser(description=\"Make OxCGRT data tidy (one row per place per date).\")\n",
+        "    p.add_argument(\"--data-dir\", required=True, type=str,\n",
+        "                   help=\"Path to the dataset root (folder containing OxCGRT_compact_national_v1.csv and timeseries_indices/).\")\n",
+        "    p.add_argument(\"--compact-file\", default=\"OxCGRT_compact_national_v1.csv\", type=str,\n",
+        "                   help=\"Name of the main compact CSV (default: OxCGRT_compact_national_v1.csv).\")\n",
+        "    p.add_argument(\"--timeseries-dir\", default=\"timeseries_indices\", type=str,\n",
+        "                   help=\"Subdirectory containing OxCGRT_timeseries_*_v1.csv (default: timeseries_indices).\")\n",
+        "    p.add_argument(\"--out\", required=True, type=str,\n",
+        "                   help=\"Output CSV path.\")\n",
+        "    p.add_argument(\"--date-col\", default=\"DateISO\", type=str,\n",
+        "                   help=\"Name for the normalized date column (default: DateISO).\")\n",
+        "    p.add_argument(\"--sort\", action=\"store_true\",\n",
+        "                help=\"Sort output by Country/Region/City and date (progression order).\")\n",
+        "\n",
+        "    return p.parse_args(argv)\n",
+        "\n",
+        "\n",
+        "def log(msg: str):\n",
+        "    print(msg, flush=True)\n",
+        "\n",
+        "\n",
+        "def read_compact(compact_path: Path, date_col_name: str,) -> pd.DataFrame:\n",
+        "    log(f\"Reading compact file: {compact_path}\")\n",
+        "    read_opts = dict(dtype=None, low_memory=False)\n",
+        "\n",
+        "\n",
+        "    df = pd.read_csv(compact_path, **read_opts)\n",
+        "    df = normalize_compact_chunk(df, date_col_name)\n",
+        "\n",
+        "    log(f\"Compact rows after filter: {len(df):,}\")\n",
+        "    return df\n",
+        "\n",
+        "\n",
+        "def normalize_compact_chunk(df: pd.DataFrame, date_col_name: str) -> pd.DataFrame:\n",
+        "    if \"Date\" in df.columns:\n",
+        "        df[date_col_name] = pd.to_datetime(df[\"Date\"].astype(str), format=\"%Y%m%d\", errors=\"coerce\")\n",
+        "    else:\n",
+        "        raise ValueError(\"Expected 'Date' column in compact file.\")\n",
+        "\n",
+        "    # Add days since epoch\n",
+        "    df[\"DaysSince2020\"] = (df[date_col_name] - EPOCH).dt.days\n",
+        "\n",
+        "    # Ensure identity keys exist even if missing\n",
+        "    for c in IDENTITY_COLS:\n",
+        "        if c not in df.columns:\n",
+        "            df[c] = pd.NA\n",
+        "\n",
+        "    return df\n",
+        "\n",
+        "\n",
+        "def find_timeseries_files(timeseries_dir: Path) -> List[Tuple[str, Path]]:\n",
+        "    files = []\n",
+        "    for p in sorted(timeseries_dir.glob(\"OxCGRT_timeseries_*_v1.csv\")):\n",
+        "        m = re.match(r\"OxCGRT_timeseries_(.+?)_v1\\.csv$\", p.name)\n",
+        "        if not m:\n",
+        "            continue\n",
+        "        qty = m.group(1)\n",
+        "        files.append((qty, p))\n",
+        "    return files\n",
+        "\n",
+        "\n",
+        "def melt_timeseries(path: Path, date_col_name: str, quantity_name: str) -> pd.DataFrame:\n",
+        "    # Many date columns, few rows — read whole file\n",
+        "    df = pd.read_csv(path, low_memory=False)\n",
+        "    # Identify date columns by pattern like 01Jan2020\n",
+        "    date_cols = [c for c in df.columns if DATE_COL_PATTERN.match(c)]\n",
+        "    if not date_cols:\n",
+        "        # Some variants may use different caps or formats — try a fallback to anything like ddMmmYYYY ignoring leading zeros\n",
+        "        raise ValueError(f\"No date-like columns found in {path}\")\n",
+        "\n",
+        "    long_df = df.melt(id_vars=[c for c in df.columns if c not in date_cols],\n",
+        "                      value_vars=date_cols,\n",
+        "                      var_name=\"DateToken\",\n",
+        "                      value_name=quantity_name)\n",
+        "\n",
+        "    # Convert DateToken to datetime\n",
+        "    long_df[date_col_name] = pd.to_datetime(long_df[\"DateToken\"], format=\"%d%b%Y\", errors=\"coerce\")\n",
+        "    long_df.drop(columns=[\"DateToken\"], inplace=True)\n",
+        "\n",
+        "    # Keep identity cols and date + the metric column\n",
+        "    keep_cols = set(IDENTITY_COLS + [date_col_name, quantity_name])\n",
+        "    for c in IDENTITY_COLS:\n",
+        "        if c not in long_df.columns:\n",
+        "            long_df[c] = pd.NA\n",
+        "\n",
+        "    cols = [*IDENTITY_COLS, date_col_name, quantity_name]\n",
+        "    long_df = long_df[cols]\n",
+        "\n",
+        "    return long_df\n",
+        "\n",
+        "\n",
+        "def main(argv = None):\n",
+        "    args = parse_args(argv)\n",
+        "    data_dir = Path(args.data_dir).expanduser().resolve()\n",
+        "    compact_path = (data_dir / args.compact_file).resolve()\n",
+        "    timeseries_dir = (data_dir / args.timeseries_dir).resolve()\n",
+        "\n",
+        "    if not compact_path.exists():\n",
+        "        raise SystemExit(f\"Compact file not found: {compact_path}\")\n",
+        "\n",
+        "    # Read compact\n",
+        "    compact_df = read_compact(\n",
+        "        compact_path,\n",
+        "        date_col_name=args.date_col,\n",
+        "    )\n",
+        "\n",
+        "    # Gather timeseries files\n",
+        "    if timeseries_dir.exists():\n",
+        "        ts_files = find_timeseries_files(timeseries_dir)\n",
+        "    else:\n",
+        "        ts_files = []\n",
+        "\n",
+        "    if not ts_files:\n",
+        "        print(\"Warning: No matching time-series files found for requested indices.\")\n",
+        "\n",
+        "\n",
+        "    # Build an index for fast merging\n",
+        "    # Using a tuple key (CountryCode, RegionCode, CityCode, Jurisdiction, DateISO)\n",
+        "    merge_keys = [*IDENTITY_COLS, args.date_col]\n",
+        "\n",
+        "    # Ensure proper dtypes for join keys\n",
+        "    for k in IDENTITY_COLS:\n",
+        "        compact_df[k] = compact_df[k].astype(\"string\").astype(object)  # avoid categorical surprises\n",
+        "\n",
+        "    # Progress bar over timeseries files\n",
+        "    if ts_files:\n",
+        "        tqdm_bar = tqdm(ts_files, desc=\"Merging timeseries\", unit=\"file\")\n",
+        "        for qty, path in tqdm_bar:\n",
+        "            tqdm_bar.set_postfix_str(qty)\n",
+        "            ts_long = melt_timeseries(path, args.date_col, quantity_name=qty)\n",
+        "            # Align dtypes\n",
+        "            for k in IDENTITY_COLS:\n",
+        "                ts_long[k] = ts_long[k].astype(\"string\").astype(object)\n",
+        "\n",
+        "            compact_df = compact_df.merge(ts_long, on=merge_keys, how=\"outer\")\n",
+        "\n",
+        "    # Guarantee a stable column order: identity -> DateISO -> DaysSince2020 -> rest (sorted)\n",
+        "    base_cols = [*IDENTITY_COLS, args.date_col, \"DaysSince2020\"]\n",
+        "    rest_cols = [c for c in compact_df.columns if c not in base_cols]\n",
+        "\n",
+        "    # Put a few high-signal columns earlier if they exist\n",
+        "    preferred = [\n",
+        "        \"StringencyIndex_Average\", \"GovernmentResponseIndex_Average\",\n",
+        "        \"ContainmentHealthIndex_Average\", \"EconomicSupportIndex\"\n",
+        "    ]\n",
+        "    preferred_existing = [c for c in preferred if c in rest_cols]\n",
+        "    remaining = [c for c in rest_cols if c not in preferred_existing]\n",
+        "    ordered_cols = base_cols + preferred_existing + remaining\n",
+        "\n",
+        "    compact_df = compact_df[ordered_cols]\n",
+        "\n",
+        "    if args.sort:\n",
+        "        log(\"Sorting output by region and date...\")\n",
+        "        sort_keys = [\"CountryCode\", \"RegionCode\", \"CityCode\", \"Jurisdiction\", args.date_col]\n",
+        "        # Only keep keys that exist in the dataframe (defensive)\n",
+        "        sort_keys = [k for k in sort_keys if k in compact_df.columns]\n",
+        "        compact_df.sort_values(sort_keys, inplace=True, ignore_index=True)\n",
+        "\n",
+        "    # Write output\n",
+        "    out_path = Path(args.out).expanduser().resolve()\n",
+        "    out_path.parent.mkdir(parents=True, exist_ok=True)\n",
+        "\n",
+        "    log(f\"Writing output to: {out_path}\")\n",
+        "\n",
+        "\n",
+        "    compact_df.to_csv(out_path, index=False)\n",
+        "\n",
+        "    # Quick summary\n",
+        "    n_places = compact_df[IDENTITY_COLS].drop_duplicates().shape[0]\n",
+        "    n_countries = compact_df[\"CountryName\"].drop_duplicates().shape[0]\n",
+        "    n_rows = len(compact_df)\n",
+        "    min_date = compact_df[args.date_col].min()\n",
+        "    max_date = compact_df[args.date_col].max()\n",
+        "    log(f\"Done. Rows: {n_rows:,} | Unique Countries {n_countries:,} | Unique places: {n_places:,} | Dates: {min_date.date()} → {max_date.date()}\")\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Reading compact file: D:\\Documents\\NU-2025-2026\\1-Fall-2025\\cs326-final\\data\\covid-policy-dataset\\data\\OxCGRT_compact_national_v1.csv\n",
+            "Compact rows after filter: 202,760\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "Merging timeseries: 100%|██████████| 4/4 [00:05<00:00,  1.50s/file, StringencyIndex]        "
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Sorting output by region and date...\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Writing output to: D:\\Documents\\NU-2025-2026\\1-Fall-2025\\cs326-final\\figures\\oxcgrt_tidy.csv\n"
+          ]
+        }
+      ],
+      "source": [
+        "main([\n",
+        "    \"--data-dir\", \"data/covid-policy-dataset/data\",\n",
+        "    \"--timeseries-dir\", \"timeseries_indices\",\n",
+        "    \"--out\", \"figures/oxcgrt_tidy.csv\",\n",
+        "    \"--sort\",\n",
+        "])"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -41,7 +315,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "C:\\Users\\esamp\\AppData\\Local\\Temp\\ipykernel_21372\\1957211312.py:11: DtypeWarning: Columns (2,3,4,5,47,48,57) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+            "C:\\Users\\esamp\\AppData\\Local\\Temp\\ipykernel_27904\\554044387.py:11: DtypeWarning: Columns (2,3,4,5,47,48,57) have mixed types. Specify dtype option on import or set low_memory=False.\n",
             "  df = pd.read_csv('data/oxcgrt_tidy.csv')\n"
           ]
         }
@@ -57,8 +331,7 @@
         "plt.rcParams['figure.figsize'] = (12, 6)\n",
         "\n",
         "\n",
-        "df = pd.read_csv('data/oxcgrt_tidy.csv')\n",
-        "\n"
+        "df = pd.read_csv('data/oxcgrt_tidy.csv')\n"
       ]
     },
     {
