--- a/cs326_colab.ipynb
+++ b/cs326_colab.ipynb
@@ -45,7 +45,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -163,7 +163,7 @@
         "    return long_df\n",
         "\n",
         "\n",
-        "def main(argv = None):\n",
+        "def clean(argv = None):\n",
         "    args = parse_args(argv)\n",
         "    data_dir = Path(args.data_dir).expanduser().resolve()\n",
         "    compact_path = (data_dir / args.compact_file).resolve()\n",
@@ -251,7 +251,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "metadata": {},
       "outputs": [
         {
@@ -266,7 +266,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "Merging timeseries: 100%|██████████| 4/4 [00:05<00:00,  1.50s/file, StringencyIndex]        "
+            "Merging timeseries: 100%|██████████| 4/4 [00:05<00:00,  1.40s/file, StringencyIndex]        "
           ]
         },
         {
@@ -287,12 +287,13 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Writing output to: D:\\Documents\\NU-2025-2026\\1-Fall-2025\\cs326-final\\figures\\oxcgrt_tidy.csv\n"
+            "Writing output to: D:\\Documents\\NU-2025-2026\\1-Fall-2025\\cs326-final\\figures\\oxcgrt_tidy.csv\n",
+            "Done. Rows: 456,225 | Unique Countries 185 | Unique places: 395 | Dates: 2020-01-01 → 2023-02-28\n"
           ]
         }
       ],
       "source": [
-        "main([\n",
+        "clean([\n",
         "    \"--data-dir\", \"data/covid-policy-dataset/data\",\n",
         "    \"--timeseries-dir\", \"timeseries_indices\",\n",
         "    \"--out\", \"figures/oxcgrt_tidy.csv\",\n",
@@ -1080,16 +1081,50 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
+        "### Pipeline Overview [FILL ME IN]"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
         "### Clustering"
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "#### Intuition [FILL ME IN]"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "#### Clustering Code"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "metadata": {
         "id": "Oms1jnCpJoGG"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "ename": "NameError",
+          "evalue": "name 'filtered_covid_data' is not defined",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "Cell \u001b[1;32mIn[13], line 27\u001b[0m\n\u001b[0;32m     21\u001b[0m     country_features \u001b[38;5;241m=\u001b[39m country_features\u001b[38;5;241m.\u001b[39mdropna()\n\u001b[0;32m     24\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m country_features\n\u001b[1;32m---> 27\u001b[0m country_features \u001b[38;5;241m=\u001b[39m \u001b[43mprepare_clustering_features\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+            "Cell \u001b[1;32mIn[13], line 5\u001b[0m, in \u001b[0;36mprepare_clustering_features\u001b[1;34m()\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21mprepare_clustering_features\u001b[39m():\n\u001b[1;32m----> 5\u001b[0m     country_features \u001b[38;5;241m=\u001b[39m \u001b[43mfiltered_covid_data\u001b[49m\u001b[38;5;241m.\u001b[39mgroupby(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mCountryName\u001b[39m\u001b[38;5;124m'\u001b[39m)\u001b[38;5;241m.\u001b[39magg({\n\u001b[0;32m      6\u001b[0m         \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mStringencyIndex\u001b[39m\u001b[38;5;124m'\u001b[39m: [\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmean\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmax\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mstd\u001b[39m\u001b[38;5;124m'\u001b[39m],\n\u001b[0;32m      7\u001b[0m         \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mGovernmentResponseIndex\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmean\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[0;32m      8\u001b[0m         \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mConfirmedCases\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmax\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[0;32m      9\u001b[0m         \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mConfirmedDeaths\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmax\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[0;32m     10\u001b[0m         \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mContainmentHealthIndex\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmean\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[0;32m     11\u001b[0m     })\u001b[38;5;241m.\u001b[39mreset_index()\n\u001b[0;32m     13\u001b[0m     country_features\u001b[38;5;241m.\u001b[39mcolumns \u001b[38;5;241m=\u001b[39m [\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mCountryName\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mAvg_Stringency\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mMax_Stringency\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[0;32m     14\u001b[0m                                  \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mStd_Stringency\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mAvg_GovResponse\u001b[39m\u001b[38;5;124m'\u001b[39m,\n\u001b[0;32m     15\u001b[0m                                  \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mTotal_Cases\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mTotal_Deaths\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mAvg_Containment\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[0;32m     17\u001b[0m     country_features[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mCaseFatalityRate\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m (\n\u001b[0;32m     18\u001b[0m         country_features[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mTotal_Deaths\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m/\u001b[39m country_features[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mTotal_Cases\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m*\u001b[39m \u001b[38;5;241m100\u001b[39m\n\u001b[0;32m     19\u001b[0m     )\n",
+            "\u001b[1;31mNameError\u001b[0m: name 'filtered_covid_data' is not defined"
+          ]
+        }
+      ],
       "source": [
         "# This function extracts features from each country for clustering\n",
         "\n",
@@ -1991,6 +2026,106 @@
         "\n",
         "\n",
         "oxcgrt_results, oxcgrt_combinations = test_oxcgrt_combinations()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "#### Results [FILL ME IN]"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Simulation"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "#### Intuition [FILL ME IN]"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "#### Simulation Training Code\n",
+        "\n",
+        "This code was initially ran and developed locally. It uses modules that we made that are not contained in the notebook."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "#### Results [FILL ME IN]"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Manual Policy Exploration"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "#### Intution [FILL ME IN]"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Manual Policy Exploration Code"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Results [FILL ME IN]"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Reinforcement Learning Policy Exploration"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Intuition [FILL ME IN]"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "#### Reinforcement Learning Policy Exploration Code"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "#### Reults [FILL ME IN]\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Conclusions"
       ]
     }
   ],
