Reinforcement learning code

--- a/cs326_colab.ipynb
+++ b/cs326_colab.ipynb
@@ -3102,7 +3102,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 23,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -3203,9 +3203,141 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 24,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Beginning training...\n",
+            "Resuming from checkpoint: models\\agents\\USA_start100_steps365_gen30.joblib\n",
+            "Finished loading from checkpoint\n",
+            "Loaded checkpoint at generation 29\n",
+            "Best fitness from checkpoint: -1499094.3955\n",
+            "Best deltas: [-0.32012539 -3.10507726 -0.58791996 ... -1.85207955  1.00304187\n",
+            " -1.56286342]\n",
+            "Evaluating best evolutionary agent on USA\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "Simulating: 100%|██████████| 365/365 [00:47<00:00,  7.76day/s]\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Error plotting policy E2_Debt/contract relief for agent evolutionary_100_to_465\n",
+            "Error plotting policy V2B_Vaccine age eligibility/availability age floor (general population summary) for agent evolutionary_100_to_465\n",
+            "Error plotting policy V2C_Vaccine age eligibility/availability age floor (at risk summary) for agent evolutionary_100_to_465\n",
+            "Error plotting policy V2D_Medically/ clinically vulnerable (Non-elderly) for agent evolutionary_100_to_465\n",
+            "Beginning training...\n",
+            "Resuming from checkpoint: models\\agents\\AUS_start100_steps365_gen30.joblib\n",
+            "Finished loading from checkpoint\n",
+            "Loaded checkpoint at generation 29\n",
+            "Best fitness from checkpoint: -1845.5555\n",
+            "Best deltas: [ 1.01152923 -0.20316442  1.49583732 ... -1.29712988 -0.10958404\n",
+            "  1.00766892]\n",
+            "Evaluating best evolutionary agent on AUS\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "Simulating: 100%|██████████| 365/365 [00:47<00:00,  7.75day/s]\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Error plotting policy E2_Debt/contract relief for agent evolutionary_100_to_465\n",
+            "Error plotting policy V2B_Vaccine age eligibility/availability age floor (general population summary) for agent evolutionary_100_to_465\n",
+            "Error plotting policy V2C_Vaccine age eligibility/availability age floor (at risk summary) for agent evolutionary_100_to_465\n",
+            "Error plotting policy V2D_Medically/ clinically vulnerable (Non-elderly) for agent evolutionary_100_to_465\n",
+            "Beginning training...\n",
+            "Resuming from checkpoint: models\\agents\\BEL_start100_steps365_gen30.joblib\n",
+            "Finished loading from checkpoint\n",
+            "Loaded checkpoint at generation 29\n",
+            "Best fitness from checkpoint: -47915.2343\n",
+            "Best deltas: [ 0.07433393  0.12777898  2.31202279 ... -0.10635935  1.61430385\n",
+            " -0.21738873]\n",
+            "Evaluating best evolutionary agent on BEL\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "Simulating: 100%|██████████| 365/365 [00:43<00:00,  8.40day/s]\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Error plotting policy E2_Debt/contract relief for agent evolutionary_100_to_465\n",
+            "Error plotting policy V2B_Vaccine age eligibility/availability age floor (general population summary) for agent evolutionary_100_to_465\n",
+            "Error plotting policy V2C_Vaccine age eligibility/availability age floor (at risk summary) for agent evolutionary_100_to_465\n",
+            "Error plotting policy V2D_Medically/ clinically vulnerable (Non-elderly) for agent evolutionary_100_to_465\n",
+            "Beginning training...\n",
+            "Resuming from checkpoint: models\\agents\\SWE_start100_steps365_gen30.joblib\n",
+            "Finished loading from checkpoint\n",
+            "Loaded checkpoint at generation 29\n",
+            "Best fitness from checkpoint: -31954.9781\n",
+            "Best deltas: [ 0.15626248  0.14326138  0.01094035 ...  0.60260448 -0.17944294\n",
+            " -0.48659974]\n",
+            "Evaluating best evolutionary agent on SWE\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "Simulating: 100%|██████████| 365/365 [00:41<00:00,  8.83day/s]\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Error plotting policy E2_Debt/contract relief for agent evolutionary_100_to_465\n",
+            "Error plotting policy V2B_Vaccine age eligibility/availability age floor (general population summary) for agent evolutionary_100_to_465\n",
+            "Error plotting policy V2C_Vaccine age eligibility/availability age floor (at risk summary) for agent evolutionary_100_to_465\n",
+            "Error plotting policy V2D_Medically/ clinically vulnerable (Non-elderly) for agent evolutionary_100_to_465\n",
+            "Beginning training...\n",
+            "Resuming from checkpoint: models\\agents\\ZMB_start100_steps365_gen30.joblib\n",
+            "Finished loading from checkpoint\n",
+            "Loaded checkpoint at generation 29\n",
+            "Best fitness from checkpoint: -4284.8176\n",
+            "Best deltas: [-0.33097094 -0.48042939  1.06399585 ...  1.05930418 -2.17139128\n",
+            "  0.10263996]\n",
+            "Evaluating best evolutionary agent on ZMB\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "Simulating: 100%|██████████| 365/365 [00:38<00:00,  9.37day/s]\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Error plotting policy E2_Debt/contract relief for agent evolutionary_100_to_465\n",
+            "Error plotting policy V2B_Vaccine age eligibility/availability age floor (general population summary) for agent evolutionary_100_to_465\n",
+            "Error plotting policy V2C_Vaccine age eligibility/availability age floor (at risk summary) for agent evolutionary_100_to_465\n",
+            "Error plotting policy V2D_Medically/ clinically vulnerable (Non-elderly) for agent evolutionary_100_to_465\n"
+          ]
+        }
+      ],
       "source": [
         "geos = [\"USA\", \"AUS\", \"BEL\", \"SWE\", \"ZMB\"]\n",
         "\n",
