--- a/cs326_colab.ipynb
+++ b/cs326_colab.ipynb
@@ -1120,7 +1120,28 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "#### Intuition [FILL ME IN]"
+        "A core assumption we wanted to challenge was that all countries behave similarly during a pandemic. In reality, countries differ in geography, culture, healthcare infrastructure, population density, and governance—all of which affect how pandemics spread and how effective policies are. Training a single regression model on all countries would ignore these differences and assume uniform behavior across diverse contexts.\n",
+        "\n",
+        "To address this, we used K-Means clustering to group countries with similar policy patterns. The goal was to create distinct clusters where countries within each cluster exhibited comparable policy behaviors during COVID-19. This would allow us to train specialized regression models—essentially \"expert predictors\"—for each cluster type rather than a one-size-fits-all model.\n",
+        "\n",
+        "\n",
+        "We specifically clustered countries based on their policy responses (not outcomes like case rates or deaths) because we wanted to understand: *Do different policy approaches lead to different outcomes?* By clustering on policy behavior first, we could then train models that predict outcomes based on policy type, and ultimately use reinforcement learning to optimize policies for each country type.\n",
+        "\n",
+        "Feature Selection Process:\n",
+        "\n",
+        "We tested 7 different policy groupings:Containment Only, Containment + Health, Containment + Economic, Health Only, Strict Policies,\n",
+        "Full Policy Response and Policies + Outcomes. For each grouping, we tested K=4, 5, 6, and 7 clusters and evaluated quality using two metrics:\n",
+        "Silhouette Score and Balance.\n",
+        "\n",
+        "We used StandardScaler to scale the features because K-Means uses Euclidean distance, so features need the same scale. Our policy features have different ranges (school closing: 0-3, masks: 0-4). So we use StandardScaler to normalize all features to z-scores (mean=0, std=1), ensuring each feature contributes equally to clustering.\n",
+        "\n",
+        "Final Choice:\n",
+        "\n",
+        "The \"Strict Policies \" feature set with K=5 produced the best results:\n",
+        "- Features: C1M_School closing, C2M_Workplace closing, C6M_Stay at home requirements, H6M_Facial Coverings\n",
+        "- Silhouette Score: 0.232 \n",
+        "- Balance: 2.45x \n",
+        "- Cluster sizes: 38, 27, 23, 41, 56 countries"
       ]
     },
     {
