--- a/cs326_colab.ipynb
+++ b/cs326_colab.ipynb
@@ -1133,15 +1133,7 @@
         "Full Policy Response and Policies + Outcomes. For each grouping, we tested K=4, 5, 6, and 7 clusters and evaluated quality using two metrics:\n",
         "Silhouette Score and Balance.\n",
         "\n",
-        "We used StandardScaler to scale the features because K-Means uses Euclidean distance, so features need the same scale. Our policy features have different ranges (school closing: 0-3, masks: 0-4). So we use StandardScaler to normalize all features to z-scores (mean=0, std=1), ensuring each feature contributes equally to clustering.\n",
-        "\n",
-        "Final Choice:\n",
-        "\n",
-        "The \"Strict Policies \" feature set with K=5 produced the best results:\n",
-        "- Features: C1M_School closing, C2M_Workplace closing, C6M_Stay at home requirements, H6M_Facial Coverings\n",
-        "- Silhouette Score: 0.232 \n",
-        "- Balance: 2.45x \n",
-        "- Cluster sizes: 38, 27, 23, 41, 56 countries"
+        "We used StandardScaler to scale the features because K-Means uses Euclidean distance, so features need the same scale. Our policy features have different ranges (school closing: 0-3, masks: 0-4). So we use StandardScaler to normalize all features to z-scores (mean=0, std=1), ensuring each feature contributes equally to clustering.\n"
       ]
     },
     {
@@ -2078,7 +2070,14 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "#### Results [FILL ME IN]"
+        "#### Results \n",
+        "\n",
+        "The \"Strict Policies \" feature set with K=5 produced the best results:\n",
+        "- Features: C1M_School closing, C2M_Workplace closing, C6M_Stay at home requirements, H6M_Facial Coverings\n",
+        "- Silhouette Score: 0.232 \n",
+        "- Balance: 2.45x \n",
+        "- Cluster sizes: 38, 27, 23, 41, 56 countries\n",
+        "The clustering captured real policy behavior patterns rather than just geographic or economic similarities."
       ]
     },
     {
@@ -4040,7 +4039,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "#### Reults\n",
+        "#### Results\n",
         "\n",
         "In the first batch of training these countries, the reinforcement learning model had found a way to make the confirmed cases negative. We had also encountered a bug where we allowed the agent to change what day it was simulating. It would pretend that every single day the model was predicting was day zero of the pandemic. That gave it the best results, as the least amount of cases were on the first day of the pandemic. This behavior was not desirable. After removing that bug and adding a part of the reward function that punished impossible scenarios, we were finally able to train our model properly.\n",
         "\n",
@@ -4052,6 +4051,34 @@
       "metadata": {},
       "source": [
         "## Conclusions"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Policies Work Together: The \"super agent\" experiment of combining individually optimal policy levels actually worsened outcomes. This proved that policies interact; you cannot optimize them separately and combine them. Effective pandemic response requires coordinated policy bundles.\n",
+        "\n",
+        "Stricter Isn't Always Better: Our reinforcement learning agents consistently outperformed maximum-strictness policies, demonstrating diminishing returns from excessive restrictions. The RL agents discovered that balanced, targeted interventions work better than blanket maximum restrictions.\n",
+        "\n",
+        "\n",
+        "RL Policy Recommendations for the US:\n",
+        "Close public transit\n",
+        "Close workplaces\n",
+        "No recommendation to cancel public events, but restriction on gathering size\n",
+        "Stay at home requirement\n",
+        "Travel in and outside country restrictedCoordinated public information campaign \n",
+        "Open public testing\n",
+        "Comprehensive contact tracing\n",
+        "Universal vaccination availability\n",
+        "Highest level of protection for elderly people\n",
+        "\n",
+        "Questionable recommendations: No mask requirements, keep schools open, no income support\n",
+        "\n",
+        "Some RL recommendations seem unrealistic or contradict known science (like no masks), likely reflecting limitations in our simulation models or reward function. However, the general pattern is clear: **coordinated, adaptive policies outperform blanket maximum strictness\n",
+        "\n",
+        "\n",
+        "Our models achieved strong predictive accuracy but had notable limitations: instability with rapid outcome changes, inability to predict outcomes for unseen policy combinations, limited simulation period\n"
       ]
     }
   ],
